--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
                 <% } %>
             <% } else { %>
             <br>
-            Welcome to supermarket app! <br>
+            Welcome to Explorer Sauvage where all your scents will find you! <br>
             Please <a href = "/login" >login</a> to continue...
             <% } %>
         </p>
