--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Supermarket App</a>
+      <a class="navbar-brand" href="/">Explorer Sauvage</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,11 +33,11 @@
 
   <!-- Main Content -->
   <div class="container mt-4">
-    <h2 class="text-center mb-4">Add New Product</h2>
+    <h2 class="text-center mb-4">Add New Fragrance</h2>
     <form action="/addProduct" method="POST" enctype="multipart/form-data" class="mx-auto" style="max-width: 500px;">
 
       <div class="mb-3">
-        <label for="name" class="form-label">Product Name</label>
+        <label for="name" class="form-label">Fragrance Name</label>
         <input type="text" class="form-control" id="name" name="name" required>
       </div>
 
