Make all changes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-5 text-center">Welcome Back to Perfume Paradise 🌸</h1>
+        <h1 class="mt-5 text-center">Welcome Back to Explorer Sauvage 🌸</h1>
         <p class="text-center">Please log in to explore our luxurious fragrance collection.</p>
 
         <% if (errors && errors.length > 0) { %>
