--- a/views/addFragrance.ejs
+++ b/views/addFragrance.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Perfume Paradise App</title>
+  <title>Explorer Sauvage</title>
 </head>
 <body>
   <!-- Navbar -->
@@ -34,7 +34,7 @@
   <!-- Main Content -->
   <div class="container mt-4">
     <h2 class="text-center mb-4">Add New Fragrance</h2>
-    <form action="/addProduct" method="POST" enctype="multipart/form-data" class="mx-auto" style="max-width: 500px;">
+    <form action="/addFragrance" method="POST" enctype="multipart/form-data" class="mx-auto" style="max-width: 500px;">
 
       <div class="mb-3">
         <label for="name" class="form-label">Fragrance Name</label>
@@ -52,12 +52,17 @@
       </div>
 
       <div class="mb-4">
-        <label for="image" class="form-label">Product Image</label>
+        <label for="description" class="form-label">Description</label>
+        <input class="text" type="form-control" id="description" name="description" required>
+      </div>
+
+      <div class="mb-5">
+        <label for="image" class="form-label">Fragrance Image</label>
         <input class="form-control" type="file" id="image" name="image" accept="image/*" required>
       </div>
 
       <div class="d-grid">
-        <button type="submit" class="btn btn-primary">Add Product</button>
+        <button type="submit" class="btn btn-primary">Add Fragrance</button>
       </div>
 
     </form>
