--- a/views/addFragrance.ejs
+++ b/views/addFragrance.ejs
@@ -21,7 +21,7 @@
             <a class="nav-link" href="/inventory">Inventory</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link" href="/addProduct">Add New Product</a>
+            <a class="nav-link" href="/addFragrance">Add New Fragrance</a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
