--- a/views/fragrance.ejs
+++ b/views/fragrance.ejs
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Supermarket App</a>
+          <a class="navbar-brand" href="/">Explorer Sauvage</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="/inventory">Inventory</a>
                 </li> 
                 <li class="nav-item">
-                  <a class="nav-link" href="/addProduct">Add new product</a>
+                  <a class="nav-link" href="/addFragrance">Add new fragrance</a>
                 </li> 
               <% } %>
               <li class="nav-item">
@@ -37,17 +37,18 @@
     <div class="container">
         <p>Welcome, <%= user.username %> (<%= user.role %>)</p>
         <br>
-        <div class="text-center"><h2>Product Details</h2></div>
+        <div class="text-center"><h2>Fragrance Details</h2></div>
         <br>
-        <% if (product) { %> <!-- Check if product data exists -->
+        <% if (fragrance) { %> <!-- Check if fragrance data exists -->
             <div>
-                <p><b>Product Name:</b><br> <%= product.productName %></p>
-                <p><b>Product Image:</b><br> <img src = "../images/<%= product.image %>" width="20%"></p>
-                <p><b>Product Quantity:</b><br> <%= product.quantity %></p>
-                <p><b>Price:</b><br> $<%= product.price.toFixed(2) %></p> 
+                <p><b>Fragrance Name:</b><br> <%= fragrance.fragrance %></p>
+                <p><b>Fragrance Image:</b><br> <img src = "../images/<%= fragrance.image %>" width="20%"></p>
+                <p><b>Fragrance Quantity:</b><br> <%= fragrance.quantity %></p>
+                <p><b>Fragrance Description:</b><br> <%= fragrance.fragranceDescription %></p>
+                <p><b>Price:</b><br> $<%= fragrance.price.toFixed(2) %></p> 
             </div>
         <% } else { %>
-            <p>No product found.</p>
+            <p>No fragrance found.</p>
         <% } %>
         <% if (user.role === "admin") { %>
           <a href ="/inventory">Back</a>
