--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -37,6 +37,7 @@
           <tr>
             <th width="100">Fragrance Name</th>
             <th width="100">Fragrance Image</th>
+            <th width="100">Fragrance Description</th>
             <th width="50">Quantity</th>
             <th width="50">Price</th>
             <th width="50">Quantity</th>
