make all changes

--- a/views/updateFragrance.ejs
+++ b/views/updateFragrance.ejs
@@ -49,7 +49,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="quantity" class="form-label">Description</label>
+          <label for="description" class="form-label">Description</label>
           <input type="text" class="form-control" id="description" name="description" value="<%= fragrance.fragranceDescription %>" required>
         </div>
 
