--- a/views/updateFragrance.ejs
+++ b/views/updateFragrance.ejs
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Explorer Sauvage App</title>
+  <title>Explorer Sauvage</title>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Explorer Sauvage App</a>
+      <a class="navbar-brand" href="/">Explorer Sauvage</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,11 +21,7 @@
             <a class="nav-link" href="/inventory">Inventory</a>
           </li>
           <li class="nav-item">
-<<<<<<< HEAD
-            <a class="nav-link" href="/addFrangrance">Add New Fragrance</a>
-=======
             <a class="nav-link" href="/addFragrance">Add New Fragrance</a>
->>>>>>> aa08b487b8f18d8768df481945d8cd72476dd03f
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
@@ -37,7 +33,7 @@
 
   <!-- Main content -->
   <div class="container mt-4">
-    <h2 class="text-center mb-4">Update Frangrance</h2>
+    <h2 class="text-center mb-4">Update Fragrance</h2>
     
     <% if (fragrance) { %>
       <form action="/updateFragrance/<%= fragrance.fragranceId %>" method="POST" enctype="multipart/form-data" class="mx-auto" style="max-width: 500px;">
