Trying to fix adding fragrance function.

--- a/views/addFragrance.ejs
+++ b/views/addFragrance.ejs
@@ -53,7 +53,7 @@
 
       <div class="mb-4">
         <label for="description" class="form-label">Description</label>
-        <input class="text" type="form-control" id="description" name="description" required>
+        <input type="text" type="form-control" id="description" name="description" required>
       </div>
 
       <div class="mb-5">
