--- a/views/updateFragrance.ejs
+++ b/views/updateFragrance.ejs
@@ -54,9 +54,16 @@
         </div>
 
         <div class="mb-3">
-          <label for="description" class="form-label">Description</label>
-          <input type="text" class="form-control" id="description" name="description" value="<%= fragrance.fragranceDescription %>" required>
+            <label for="currentDescription" class="form-label">Current Description</label>
+            <textarea class="form-control" id="currentDescription" rows="3" readonly><%= fragrance.fragranceDescription %></textarea>
         </div>
+        
+        <div class="mb-3">
+          <label for="description" class="form-label">Update Description</label>
+          <textarea class="form-control" id="description" name="description" rows="3" placeholder="Enter new description here..."></textarea>
+        </div>
+
+        
 
         <div class="mb-3">
           <label class="form-label">Current Image</label>
