--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -37,8 +37,8 @@
           <tr>
             <th width="100">Fragrance Name</th>
             <th width="100">Fragrance Image</th>
-            <th width="50">Quantity</th>
             <th width="50">Price</th>
+            <th width="50">Quantity</th>
             <th width="50">Edit</th>
             <th width="50">Delete</th>
           </tr>
@@ -47,7 +47,7 @@
         <% for(let i=0; i < fragrances.length; i++) { %>
           <tr>
             <td><a href="/fragrance/<%= fragrances[i].fragranceId %>" ><%= fragrances[i].fragranceName %></a></td>
-            <td><img src="images/<%= fragrances[i].image || 'default.jpg' %>" width="20%"></td>
+            <td><img src="/images/<%= fragrances[i].image || 'default.jpg' %>" width="20%"></td>
             <td><%= fragrances[i].quantity %></td>
             <td>$<%= isNaN(Number(fragrances[i].price)) ? '0.00' : Number(fragrances[i].price).toFixed(2) %></td>
             <!-- Edit Link -->
