--- a/views/fragrance.ejs
+++ b/views/fragrance.ejs
@@ -41,7 +41,7 @@
         <br>
         <% if (fragrance) { %> <!-- Check if fragrance data exists -->
             <div>
-                <p><b>Fragrance Name:</b><br> <%= fragrance.fragrance %></p>
+                <p><b>Fragrance Name:</b><br> <%= fragrance.fragranceName %></p>
                 <p><b>Price:</b><br> $<%= number(fragrance.price).toFixed(2) %></p> 
                 <p><b>Fragrance Quantity:</b><br> <%= fragrance.quantity %></p>
                 <p><b>Fragrance Description:</b><br> <%= fragrance.fragranceDescription %></p>
