--- a/views/addFragrance.ejs
+++ b/views/addFragrance.ejs
@@ -57,9 +57,10 @@
       </div>
 
       <div class="mb-5">
-        <label for="image" class="form-label">Fragrance Image</label>
-        <input class="form-control" type="file" id="image" name="image" accept="image/*" required>
+        <label for="image" class="form-label">Fragrance Image URL</label>
+        <input class="form-control" type="url" id="image" name="image" placeholder="https://example.com/image.jpg" required>
       </div>
+
 
       <div class="d-grid">
         <button type="submit" class="btn btn-primary">Add Fragrance</button>
