--- a/views/addFragrance.ejs
+++ b/views/addFragrance.ejs
@@ -56,11 +56,10 @@
         <input type="text" type="form-control" id="description" name="description" required>
       </div>
 
-      <div class="mb-5">
+      <div class="mb-3">
         <label for="image" class="form-label">Fragrance Image URL</label>
-        <input class="form-control" type="url" id="image" name="image" placeholder="https://example.com/image.jpg" required>
+        <input type="url" class="form-control" id="image" name="image" placeholder="https://example.com/image.jpg" required>
       </div>
-
 
       <div class="d-grid">
         <button type="submit" class="btn btn-primary">Add Fragrance</button>
