--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -69,7 +69,7 @@
             <td>$<%= fragrances[i].price ? parseFloat(fragrances[i].price).toFixed(2) : '0.00' %></td>
 
             <!-- Edit Link -->
-            <td><a href="/updateFragrance/<%= fragrances[i].fragranceId %>">Edit</a></td>
+            <td><a href="/updateFragrance/<%= fragrances[i].fragranceId %>" class="btn btn-info">Edit</a></td>
 
             <!-- Delete Link -->
             <td>
