--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -29,7 +29,18 @@
 
   <div class="container">
     <p>Welcome, <%= user.username %> (<%= user.role %>)</p>
-    <br>
+    
+    <form method="GET" action="/shopping" class="d-flex justify-content-center my-4">
+      <input 
+        type="text" 
+        name="search" 
+        class="form-control w-50 me-2" 
+        placeholder="Search perfumes..." 
+        value="<%= search || '' %>"
+      >
+      <button type="submit" class="btn btn-outline-primary">Search</button>
+    </form>
+
     <div class="text-center"><h2>Fragrances from Explorer Sauvage Database</h2></div>
     <br>
     <table class="table table-hover small text-center">
