--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -32,7 +32,7 @@
     <p>Welcome, <%= user.username %> (<%= user.role %>)</p>
 
     <!-- Search Form -->
-    <form method="GET" action="/shopping" class="d-flex justify-content-center my-4">
+    <form method="GET" action="/inventory" class="d-flex justify-content-center my-4">
       <input 
         type="text" 
         name="search" 
