--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -30,7 +30,7 @@
   <div class="container">
     <p>Welcome, <%= user.username %> (<%= user.role %>)</p>
     
-    <form method="GET" action="/shopping" class="d-flex justify-content-center my-4">
+    <form method="GET" action="/inventory" class="d-flex justify-content-center my-4">
       <input 
         type="text" 
         name="search" 
