--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" 
+    style="background: url('/G41CUTEFOX/C237-Software-Application-Development-CA2/public/images/Fragrance Background Image.png') no-repeat center center; background-size: cover;">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Explorer Sauvage</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
