--- a/views/fragrance.ejs
+++ b/views/fragrance.ejs
@@ -44,7 +44,7 @@
                 <p><b>Fragrance Name:</b><br> <%= fragrance.fragranceName %></p>
                 <p><b>Price:</b><br> $<%= Number(fragrance.price).toFixed(2)%></p> 
                 <p><b>Fragrance Quantity:</b><br> <%= fragrance.quantity %></p>
-                <p><b>Fragrance Description:</b><br> <%= fragrance.fragranceDescription %></p>
+                <p><b>Fragrance Description:</b><br> <%= fragrance.description %></p>
                 <p><b>Fragrance Image:</b><br>
                     <% if (fragrance.image && fragrance.image.startsWith('http')) { %>
                         <img src="<%= fragrance.image %>" alt="<%= fragrance.fragranceName %>" width="20%">
