--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Perfume App - Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <%- include('partials/navbar', { user: user }) %>
